version 1.2-fix bugs  và sửa lại giao diện - sẽ sửa tiếp giao diện đẹp  hơn nữa